methods.slug.SlugSnail.scala.error
Erreur de compilation :
SlugSnail:19: error: type mismatch;
 found   : Unit
 required: Boolean
  prendBiscuit()
              ^