methods.slug.SlugSnail.scala.code
def hunt(c:Color) {
  isFacingTrial(c)
     
 }

def isFacingTrial(b:Color): Boolean={
if( estFaceMur()){
  return(false)
}
  avance()
  if (getCouleurSol()==b){
  recule()
    return(true)
}else{
    recule()
  return false
}
  prendBiscuit()
}